--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,4 +4,5 @@ const pageTitle = "Главная";
 ---
 <BaseLayout >
   <h2>Мой потрясающий подзаголовок блога</h2>
+  <h2>Мой потрясающий подзаголовок блога</h2>
 </BaseLayout>
