--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -1,14 +1,9 @@
 ---
 import BaseLayout from '../layouts/BaseLayout.astro'
+import BlogPost from '../components/BlogPost.astro';
 
-interface Post {
-  url: string;
-  frontmatter: {
-    title: string;
-  };
-}
 
-const allPosts = Object.values(import.meta.glob<Post>('./posts/*.md', { 
+const allPosts = Object.values(import.meta.glob('./posts/*.md', { 
   eager: true 
 }));
 
@@ -17,10 +12,6 @@ const pageTitle = "Мой блог об изучении Astro"
 <BaseLayout pageTitle={pageTitle}>
   <p>Здесь я буду публиковать записи о своем пути изучения Astro.</p>
   <ul>
-    {allPosts.map((post) => (
-      <li>
-        <a href={post.url}>{post.frontmatter.title}</a>
-      </li>
-    ))}
+     {allPosts.map((post: any) => <BlogPost url={post.url} title={post.frontmatter.title} />)}
   </ul>
 </BaseLayout>
