--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,8 +1,10 @@
 ---
 import BaseLayout from '../layouts/BaseLayout.astro';
+import Greeting from '../components/Greeting.jsx';
 const pageTitle = "Главная";
 ---
 <BaseLayout >
   <h2>Мой потрясающий подзаголовок блога</h2>
-  <h2>Мой потрясающий подзаголовок блога</h2>
+	<Greeting messages={["Привет", "Здравствуйте", "Приветствую", "Эй, привет"]} />
+	<Greeting client:load messages={["Hej", "Hallo", "Hola", "Habari"]} />
 </BaseLayout>
